ai-openhands/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: ai-openhands
  name: ai-openhands
